# exo2

./: .gitattributes  .gitignore  .vercelignore  AGENTS.md  Cargo.toml  FRICTION.md  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  exosuit.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json  vercel.json
crates/exohistory/: Cargo.toml
crates/exohistory/src/: analysis.rs  main.rs  output.rs  session.rs  storage.rs
crates/exohistory/tests/: cli_smoke.rs
crates/exohook/: Cargo.toml  MIGRATE.md  PLAN.md  VISION.md
crates/exohook/src/: check_runner.rs  ci_emit.rs  config.rs  discover.rs  fileset.rs  filter.rs  hooks.rs  jsonl.rs  lane.rs  legacy.rs  lib.rs  main.rs  migration.rs  output_buffer.rs  pipe_runner.rs  pty_runner.rs  shell.rs  terminal.rs  validate.rs
crates/exohook/tests/: category_filter.rs  cli_smoke.rs  config_edit.rs  config_v3.rs  extract.rs  filter_engine.rs  migrate_lefthook.rs  migrate_v3.rs  parallel_and_restage.rs  terminal_width.rs  test_support.rs  validate_v3.rs
crates/exosuit-core/: Cargo.toml
crates/exosuit-core/src/: lib.rs  reactive_map.rs  reactive_node.rs  reactive_sequence.rs
crates/exosuit-core/tests/: complex_graph_leak.rs  graph_properties.proptest-regressions  graph_properties.rs  leak_verification.rs  map_fine_grained.rs  map_iteration.rs  map_properties.rs  prompts.rs  reactive_node.rs  reactive_sequence.rs  sequence_fine_grained.rs  sequence_leak.rs  sequence_properties.rs  sequence_reactivity.rs
crates/exosuit-file-refs/: Cargo.toml
crates/exosuit-file-refs/src/: lib.rs  model.rs  parse.rs  present.rs  wasm.rs
crates/exosuit-reactivity/: Cargo.toml
crates/exosuit-reactivity-core/: Cargo.toml
crates/exosuit-reactivity-core/src/: lib.rs  revision.rs  trace.rs  types.rs
crates/exosuit-reactivity/src/: availability.rs  engine.rs  lib.rs  revision.rs  runtime.rs  trace.rs  types.rs  wasm.rs
crates/exosuit-reactivity/src/rfs/: mod.rs
crates/exosuit-reactivity/tests/: collections.rs  graph_scenarios.rs  invalidation.rs  recursion.rs  safety.rs
crates/exosuit-storage/: Cargo.toml
crates/exosuit-storage/migrations/: V001__core_tables.sql  V002__shadow_tables.sql  V003__revision_tables.sql  V004__ideas_table.sql  V005__inbox_table.sql  V006__expand_status_constraints.sql  V007__add_sort_key.sql  V008__task_logs_and_verifications.sql  V009__task_notes_and_started_at.sql  V010__epoch_sort_key.sql  V011__persistent_rowset_counters.sql  V012__axioms_table.sql  V013__perception_event_schema.sql  V014__agent_id.sql  V015__rfcs_table.sql  V016__agent_events.sql  V017__workspace_active_phase.sql  V018__inbox_action_payload.sql  V019__phase_ownership.sql  V020__reactive_revision_coverage.sql  V021__atomic_request_outcomes.sql  V022__rfc_workspace_observations.sql
crates/exosuit-storage/src/: dump.rs  functions.rs  lib.rs  maintenance.rs  migrations.rs  request_transaction.rs  revisions.rs  schema.rs  trace.rs
crates/exosuit-storage/src/vtab/: mod.rs  reactive.rs  shadow.rs
crates/exosuit-ulid/: Cargo.toml
crates/exosuit-ulid/src/: lib.rs  ulid_util.rs  wasm.rs
docs/: vision.md  (+3 more)
tools/exo/: Cargo.toml  build.rs
tools/exo-workspace/: Cargo.toml
tools/exo-workspace/src/: lib.rs
tools/exo/src/: activity.rs  argv_compiler.rs  axiom.rs  boundary.rs  cli_quote.rs  command_guidance.rs  command_reference.rs  command_spec.rs  command_text.rs  config.rs  context.rs  daemon.rs  daemon_client.rs  daemon_diagnostics.rs  daemon_outcomes.rs  daemon_transport.rs  derived.rs  diagnostics.rs  docs_links.rs  dogfood_activation.rs  event_db.rs  failure.rs  git_config.rs  github.rs  help_gen.rs  idea.rs  inbox.rs  invocation.rs  json_schema.rs  lib.rs  main.rs  map.rs  marker_inventory.rs  mcp.rs  merge_driver.rs  phase.rs  phase_owner.rs  plan.rs  post_write.rs  preload_guidance.rs  (+18 more)
tools/exo/src/api/: capability_tree.rs  display.rs  handler.rs  mod.rs  operations.rs  protocol.rs  tool_surface.rs
tools/exo/src/command/: ai.rs  axiom.rs  command_spec.rs  commit.rs  completion_confirmation.rs  context.rs  dispatcher.rs  docs.rs  dogfood.rs  epoch.rs  gc.rs  goal.rs  idea.rs  inbox.rs  init.rs  json.rs  lm_tool_metadata.rs  mod.rs  phase_cmd.rs  plan.rs  project.rs  registry.rs  rfc.rs  root.rs  router.rs  run.rs  sidecar.rs  storage.rs  strike.rs  task.rs  toml.rs  traits.rs  transport.rs  unified_diagnostics.rs  update.rs  verify.rs  write.rs
tools/exo/src/context/: rfc.rs  sqlite_loader.rs  sqlite_writer.rs
tools/exo/src/github/: fetch.rs  registry.rs  remote.rs
tools/exo/src/upgrade/: mod.rs
tools/exo/src/upgrade/plugins/: ensure_core_axioms.rs  ensure_gitattributes.rs  ensure_gitignore.rs  ensure_scoped_axioms.rs  install_global_prompts.rs  migrate_legacy_plan.rs  migrate_rfc_metadata.rs  migrate_tool_presentation.rs  mod.rs  refresh_agents_md.rs  repair_rfc_permissions.rs  update_prompts.rs
tools/exo/tests/: agent_events.rs  cases.rs  cli_dispatch.rs  cli_transport.rs  command_guidance_inventory.rs  command_spec_examples.rs  command_spec_proptests.rs  context_commands.rs  daemon_connect_or_spawn.rs  daemon_idle_timeout.rs  daemon_parity.rs  diagnostic_ordering.rs  dispatch_parity.rs  dogfood.rs  frontend_equivalence.proptest-regressions  frontend_equivalence.rs  goal_abandon.rs  goal_add_list.rs  goal_complete.rs  goal_task_parity.rs  human_reference_display.rs  impl_plan_id_only.rs  init.rs  init_bootstrap_axioms.rs  integration_test.rs  lm_tool_parity.rs  machine_channel_call_context_paths.rs  machine_channel_contract_fixtures.rs  machine_channel_coverage.rs  machine_channel_docs_links.rs  machine_channel_help.rs  machine_channel_list_phase_execution_tasks.rs  map_next_why.rs  map_steering.rs  mcp_stdio.rs  phase_finish_auto_activate.rs  phase_read_scoped.rs  phase_status_derived.rs  phase_status_derived_satisfies.rs  phase_status_impl_plan.rs  (+40 more)
tools/exo/tests/fixtures/docs_links/: needs_fix.md  ok.md
tools/exo/tests/fixtures/github_profile/wycats/.exosuit/: sidecars.toml
tools/exo/tests/support/: case.rs  mod.rs  template.rs
tools/exo/tests/test_support/: mod.rs
(+518 files in other folders)
