[package]
name = "exohook"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "exohook"
path = "src/lib.rs"

[[bin]]
name = "exohook"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
exo-reexec = { path = "../exo-reexec" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
toml_edit = "0.22"
indicatif = "0.17"
console = "0.15"
vte = "0.13"
comfy-table = { version = "7.1", default-features = false, features = ["tty"] }
toml = "0.9.11"
globset = "0.4"
serde_json = "1.0.149"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(unix)'.dependencies]
pty-process = "0.5"
signal-hook = "0.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
