[package]
name = "exosuit-core"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
exosuit-reactivity = { path = "../exosuit-reactivity" }

bincode = { version = "2.0.1", features = ["serde"] }
serde_json = "1.0.145"

[dev-dependencies]
proptest = "1.9.0"
