[package]
name = "exosuit-reactivity-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "Shared reactive types for the Exosuit revision algebra"
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

[lints]
workspace = true
