[package]
name = "exosuit-reactivity"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
exosuit-reactivity-core = { path = "../exosuit-reactivity-core" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
bincode = { version = "2.0", features = ["serde"] }
serde_json = "1.0"
lru = "0.16.2"
im = "15.1.0"
futures = "0.3.31"
glob = "0.3.3"
ulid = "1"
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-time = "1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.48.0", features = [
  "rt",
  "sync",
  "time",
  "macros",
  "rt-multi-thread",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.48.0", features = ["rt", "sync", "time", "macros"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.uuid]
version = "1.0"
features = ["v4", "serde"]

[features]
default = []
wasm = ["wasm-bindgen", "console_error_panic_hook", "serde-wasm-bindgen"]

[dev-dependencies]
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = [
  "rt",
  "sync",
  "time",
  "macros",
  "rt-multi-thread",
  "test-util",
] }
