[package]
name = "exosuit-ulid"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
ulid = { version = "1.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM requires getrandom with wasm_js feature
getrandom = { version = "0.3", optional = true }

# WASM (feature-gated)
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook", "getrandom/wasm_js"]
