[package]
name = "exo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
blake3 = "1.8.2"
exo-reexec = { path = "../../crates/exo-reexec" }
exosuit-process-host = { path = "../../crates/exosuit-process-host" }
exospec = { path = "../../crates/exospec" }
exosuit-storage = { path = "../../crates/exosuit-storage" }
cliclack = "0.3.5"
console = "0.15.11"
gray_matter = { version = "0.2", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
comfy-table = { version = "7.1", default-features = false }
toml = "0.9.8"
regex = "1.12.2"
uuid = { version = "1.19.0", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
toml_edit = "0.23.9"
ulid = { version = "1.1", features = ["serde"] }
dialoguer = "0.12.0"
glob = "0.3.3"
pathdiff = "0.2.3"
textwrap = "0.16.2"
paste = "1.0.15"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
  "signal",
  "sync",
  "time",
] }
fractional_index = "2.0.2"
libc = "0.2"
fs2 = "0.4.3"
nix = { version = "0.31.1", features = ["signal"] }
tempfile = "3.10"
[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
proptest = "1.7.0"
test-case = "3.3"

[features]
default = ["pretty-print"]
pretty-print = ["comfy-table/tty"]

[[bin]]
name = "exo"
path = "src/main.rs"

[[bin]]
name = "exo-mcp"
path = "src/bin/exo-mcp.rs"
